@@ -35,10 +35,8 @@ public class RangeEdgePartition extends RangePartition {
 
     @Override
     public int hashCode() {
-        return super.hashCode()
-                + Long.valueOf(value).hashCode()
-                + Integer.valueOf(lowerBound).hashCode()
-                + Integer.valueOf(upperBound).hashCode();
+        return super.hashCode() + new Long(value).hashCode() +
+                new Integer(lowerBound).hashCode() + new Integer(upperBound).hashCode();
     }
 
     @Override
